// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Work pattern generator Should generate a fixed work pattern 1`] = `
Array [
  Object {
    "day_of_week": "Sunday",
    "minutes": 0,
    "week_number": 1,
  },
  Object {
    "day_of_week": "Monday",
    "minutes": 480,
    "week_number": 1,
  },
  Object {
    "day_of_week": "Tuesday",
    "minutes": 0,
    "week_number": 1,
  },
  Object {
    "day_of_week": "Wednesday",
    "minutes": 0,
    "week_number": 1,
  },
  Object {
    "day_of_week": "Thursday",
    "minutes": 0,
    "week_number": 1,
  },
  Object {
    "day_of_week": "Friday",
    "minutes": 0,
    "week_number": 1,
  },
  Object {
    "day_of_week": "Saturday",
    "minutes": 0,
    "week_number": 1,
  },
]
`;

exports[`Work pattern generator Should generate a rotating work pattern 1`] = `
Array [
  Object {
    "day_of_week": "Sunday",
    "minutes": 0,
    "week_number": 1,
  },
  Object {
    "day_of_week": "Monday",
    "minutes": 480,
    "week_number": 1,
  },
  Object {
    "day_of_week": "Tuesday",
    "minutes": 0,
    "week_number": 1,
  },
  Object {
    "day_of_week": "Wednesday",
    "minutes": 0,
    "week_number": 1,
  },
  Object {
    "day_of_week": "Thursday",
    "minutes": 0,
    "week_number": 1,
  },
  Object {
    "day_of_week": "Friday",
    "minutes": 0,
    "week_number": 1,
  },
  Object {
    "day_of_week": "Saturday",
    "minutes": 0,
    "week_number": 1,
  },
  Object {
    "day_of_week": "Sunday",
    "minutes": 480,
    "week_number": 2,
  },
  Object {
    "day_of_week": "Monday",
    "minutes": 0,
    "week_number": 2,
  },
  Object {
    "day_of_week": "Tuesday",
    "minutes": 0,
    "week_number": 2,
  },
  Object {
    "day_of_week": "Wednesday",
    "minutes": 0,
    "week_number": 2,
  },
  Object {
    "day_of_week": "Thursday",
    "minutes": 0,
    "week_number": 2,
  },
  Object {
    "day_of_week": "Friday",
    "minutes": 0,
    "week_number": 2,
  },
  Object {
    "day_of_week": "Saturday",
    "minutes": 0,
    "week_number": 2,
  },
]
`;
